--- a/wegas-app/src/main/webapp/wegas-util/css/wegas-widgetmenu.css
+++ b/wegas-app/src/main/webapp/wegas-util/css/wegas-widgetmenu.css
@@ -71,7 +71,7 @@
     display: block;
     position: absolute;
     right: 0px;
-    top: 0.9em;
+    top: 12px;
     width: 15px;
     height: 8px;
     content: "";
